Project upgrade
- Upgrade to Spring Boot 3.4.4
- Upgrade to Spring Cloud 2024.0.1
- Upgrade to MySQL Docker image 9.2.0
- Upgrade to Cassandra Docker image 5.0.3
- Upgrade to Awaitility 4.3.0
- Upgrade to Jib 3.4.5
- Upgrade to Zipkin Docker image 3.5.0
- Upgrade to SpringDoc OpenAPI 2.8.6
- Remove logging.pattern.level property
- Add the .gitattributes file
- In test cases, replace get(0) to getFirst()