@@ -28,7 +28,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 class UserEventListener2Test {
 
     @Container
-    private static final CassandraContainer<?> cassandraContainer = new CassandraContainer<>("cassandra:5.0.2");
+    private static final CassandraContainer<?> cassandraContainer = new CassandraContainer<>("cassandra:5.0.3");
 
     @Test
     void testUsers() {
@@ -65,10 +65,10 @@ class UserEventListener2Test {
 
             assertThat(userEvents).isNotNull();
             assertThat(userEvents.size()).isEqualTo(1);
-            assertThat(userEvents.get(0).getKey().getUserId()).isEqualTo(userId);
-            assertThat(userEvents.get(0).getKey().getDatetime()).isEqualTo(datetime);
-            assertThat(userEvents.get(0).getData()).isEqualTo(userJson);
-            assertThat(userEvents.get(0).getType()).isEqualTo(eventType.name());
+            assertThat(userEvents.getFirst().getKey().getUserId()).isEqualTo(userId);
+            assertThat(userEvents.getFirst().getKey().getDatetime()).isEqualTo(datetime);
+            assertThat(userEvents.getFirst().getData()).isEqualTo(userJson);
+            assertThat(userEvents.getFirst().getType()).isEqualTo(eventType.name());
         }
     }
 }
